--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
     <h1>Welcome to the Meteo App</h1>
-    <footer>Built by Brittany Luvera</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/brittanyluvera" target="_blank"
+        >Brittany Luvera</a
+      >, code hosted on
+      <a href="https://github.com/brittanyluvera/meteo" target="_blank">
+        GitHub</a
+      >
+      and website hosted on
+      <a href="https://meteo-app-bl.netlify.app/" target="_blank">Netlify</a>
+    </footer>
   </body>
 </html>
