Changed wording on footer

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       Coded by
       <a href="https://github.com/brittanyluvera" target="_blank"
         >Brittany Luvera</a
-      >, code hosted on
+      >, is open-sourced on
       <a href="https://github.com/brittanyluvera/meteo" target="_blank">
         GitHub</a
       >
-      and website hosted on
+      and hosted by
       <a href="https://meteo-app-bl.netlify.app/" target="_blank">Netlify</a>
     </footer>
   </body>
