--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <title>Meteo App</title>
   </head>
   <body>
-    <h1>Welcome to the Meteo App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main><div>
+      <h1>Boston</h1>
+      <p>
+        Thursday 11:41, overcast clouds 
+    </br>
+         Humidity: 77%, Wind: 3.6km/h
+      </p>
+      </div>
+      <div>
+      🌤️12°C
+      </div>
+    </main>
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/brittanyluvera" target="_blank"
         >Brittany Luvera</a
       >, is open-sourced on
