--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Meteo App</title>
+<script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>    
+<title>Meteo App</title>
   </head>
   <body>
     <div class="weather-app">
@@ -24,7 +25,7 @@
     <main>
         <div class="weather-app-data">
         <div>
-      <h1 class="weather-app-city" id="city">Boston</h1>
+      <h1 class="weather-app-city" id="city"></h1>
       <p class= "weather-app-details">
         Thursday 11:41, overcast clouds 
     </br>
@@ -33,7 +34,7 @@
       </div>
       <div class="weather-app-temperature-container">
         <div class="weather-app-icon">🌤️</div>
-        <div class="weather-app-temperature">12 </div>
+        <div class="weather-app-temperature" id="temperature">12 </div>
         <div class="weather-app-unit">°C </div>
       </div>
     </main>
