--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         <div>
       <h1 class="weather-app-city" id="city"></h1>
       <p class= "weather-app-details">
-        Thursday 11:41, overcast clouds 
+        <span id="time"></span>, 
+        <span id="description"></span> 
     </br>
-         Humidity:<strong> 77%</strong>, Wind:<strong> 3.6km/h</strong>
+         Humidity:<strong id="humidity"> </strong>, 
+         Wind:<strong id="wind-speed"> </strong>
       </p>
       </div>
       <div class="weather-app-temperature-container">
